tests/fixtures/type_parameter_mismatch.rb
module Enumerable::[Mismatched]
end

class Array::[Nope]
end
